--- a/src/main/res/layout/youtube.xml
+++ b/src/main/res/layout/youtube.xml
@@ -1,20 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-    <ImageView
-            android:id="@+id/share_button"
-            android:src="@android:drawable/ic_menu_share"
-            android:padding="10dp"
-            android:layout_gravity="right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-    <WebView
-            android:id="@+id/web"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-</LinearLayout>
+<WebView xmlns:android="http://schemas.android.com/apk/res/android"
+         android:id="@+id/web"
+         android:scrollbars="none"
+         android:overScrollMode="never"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"/>
