--- a/src/main/res/layout/video_dialog.xml
+++ b/src/main/res/layout/video_dialog.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:id="@+id/container"
              android:orientation="vertical"
-             android:background="@android:color/black"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
 
@@ -12,11 +12,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-    <ProgressBar
+    <FrameLayout
             android:id="@+id/progress_spinner"
-            android:layout_gravity="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:background="@android:color/black"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <ProgressBar
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+    </FrameLayout>
 
     <ImageView
             android:id="@+id/play_button"
