--- a/src/main/res/layout/ad.xml
+++ b/src/main/res/layout/ad.xml
@@ -22,4 +22,9 @@
             android:id="@+id/thumbnail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+    <ImageView
+            android:id="@+id/optout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 </LinearLayout>
