--- a/src/main/res/layout/ad.xml
+++ b/src/main/res/layout/ad.xml
@@ -27,4 +27,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+    <ImageView
+            android:id="@+id/brand_logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
 </LinearLayout>
