--- a/src/main/res/menu/share_menu.xml
+++ b/src/main/res/menu/share_menu.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:id="@+id/menu_item_custom"
+        android:showAsAction="always"
+        android:title="Custom"
+        android:visible="false"
+            />
+
     <item
             android:id="@+id/menu_item_share"
             android:showAsAction="always"
