--- a/src/main/res/layout/ad.xml
+++ b/src/main/res/layout/ad.xml
@@ -27,6 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
+    <TextView
+            android:id="@+id/slug"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
     <ImageView
             android:id="@+id/brand_logo"
             android:layout_width="match_parent"
